# clara-v3

./: .gitignore  CMakeLists.txt  README.md  checkers.cpp  checkers.h
src/: CMakeLists.txt  checkers.cpp  checkers.h
src/checkers/: checkers.cpp
src/main-ui/: game-ui.cpp  game-ui.h  main.cpp
src/ui-framework/: ui-framework.cpp  ui-framework.h
tests/: CMakeLists.txt  checkers_test.cpp
